KDE Plasma Modified

--- a/systemd/dwu.service
+++ b/systemd/dwu.service
@@ -1,6 +1,24 @@
 [Unit]
-Description=DWU wallpaper updater
+Description=DWU Continuous Wallpaper Updater
+After=graphical-session.target
+PartOf=graphical-session.target
 
 [Service]
-Type=oneshot
-ExecStart=/usr/bin/dwu --today
+Type=simple
+# IMPORTANT: Update the path below to match where dwu is installed on your system.
+# Find your path with: which dwu
+# Common locations:
+#   - /usr/bin/dwu (AUR package, system package manager) - default
+#   - /home/USER/.local/bin/dwu (pipx, pip install --user)
+ExecStart=/usr/bin/dwu --continuous --interval 3600
+Restart=on-failure
+RestartSec=10
+
+# Ensure proper environment for KDE Plasma
+# systemd user services automatically inherit environment variables from the user session,
+# including DBUS_SESSION_BUS_ADDRESS, DISPLAY (X11), and WAYLAND_DISPLAY (Wayland).
+# The DISPLAY=:0 below is a fallback for X11 if not inherited.
+Environment="DISPLAY=:0"
+
+[Install]
+WantedBy=default.target
